--- a/geneids/package.json
+++ b/geneids/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "gene-name-extractor",
-  "version": "1.0.0",
-  "description": "",
+  "name": "gene2name",
+  "version": "0.0.1",
+  "description": "Retrieve gene name from given gene ID",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Eric Hartline",
   "license": "ISC",
   "dependencies": {
-    "redis": "^2.8.0"
+    "bunyan": "^1.8.12",
+    "minio": "^7.0.1",
+    "redis": "^2.8.0",
+    "tmp": "0.0.33"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
