refactor: add bionode-gff to read file line by line, simplify code

--- a/geneids/package.json
+++ b/geneids/package.json
@@ -10,6 +10,7 @@
   "author": "Eric Hartline",
   "license": "ISC",
   "dependencies": {
+    "bionode-gff": "^2.0.0",
     "bunyan": "^1.8.12",
     "minio": "^7.0.1",
     "redis": "^2.8.0",
